--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Miracle Diary</string>
     <string name="title_activity_goal">GoalActivity</string>
+    <string name="title_activity_diary">DiaryActivity</string>
 </resources>
