--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Miracle Diary</string>
     <string name="title_activity_goal">GoalActivity</string>
     <string name="title_activity_diary">DiaryActivity</string>
+    <string name="logo">logo</string>
 </resources>
